--- a/css/tilezoom.css
+++ b/css/tilezoom.css
@@ -1,4 +1,4 @@
-#tilezoom-container {
+#container {
   background-color: black;
   border: 1px solid black;
   color: white;   /* for error messages, etc. */
@@ -10,7 +10,7 @@
   margin-top: 20px;
 }
 
-#tilezoom-content {
+#content {
   width: 960px;
   margin: 20px 0 0 0;
   padding: 0 10px 40px 10px;
