--- a/css/_home.scss
+++ b/css/_home.scss
@@ -2,7 +2,7 @@
 /***************************/
 
 .hero {
-	background: url("../images/hero/etching1.jpg") no-repeat;
+	background: #f1f1f1;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -12,6 +12,21 @@
 .new-book {
 	float: right;
 	margin: 35px 60px 30px 0;
+	.ribbon {
+		display: inline-block;
+		background: #00b3d6;
+		color: white;
+		opacity: .7;
+		padding: 20px 10px 20px 30px;
+		font-size: 2.5em;
+		position: fixed;
+		margin-top: 20px;
+		margin-left: -10px;
+		.ribbon-content:before {
+			left: 0;
+			border-width: 1em 0 0 1em;
+		}
+	}
 }
 .book-formats {
 	margin: 15px 0 0 30px;
@@ -22,7 +37,7 @@
 		height: 40px;
 		float: left;
 		margin-right: 10px;
-		background: url("../images/book-formats.png") no-repeat; }
+		background: url("../img/book-formats.png") no-repeat; }
 	a.cu-press { background-position: 0 -40px; }
 	a.cu-press:hover { background-position: 0 -80px; }
 	a.amazon { background-position: -40px -40px; }
@@ -37,12 +52,12 @@
 /* Featured content */
 /***************************/
 
-.panel-display {
-	h2.pane-title {
-		background: #595959;
-		color: white;
-		width: 70%;
-		padding: 5px 10px;
+.feature {
+	h3 {
+		// background: #595959;
+		// color: white;
+		// width: 70%;
+		// padding: 5px 10px;
 		font-size: 1.625em;
 		margin-bottom: 1em; }
 }
@@ -75,5 +90,5 @@
 /***************************/
 .carousel {
 	min-height: 400px;
-	background: url("../images/hr-bg.png") no-repeat bottom;
+	background: url("../img/hr-bg.png") no-repeat bottom;
 }
