--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -4,38 +4,31 @@
 		margin: 25px 0 25px -20px;
 		padding-top: 30px;
 		float: none;
-		font-size: 6.5em;
+		font-size: 4.5em;
 		color: $turquoise;
 		font-family: 'MercuryRegular';
-		text-transform: lowercase;
 	}
 	.brand:hover { color: $turquoiseHover; }
 	.nav {
+		margin-top: 50px;
 		float: right;
-		margin-right: 0; }
-	.menu {
-		margin-top: 60px;
-		list-style: none;
 		li {
-			float: left;
-			margin-left: 0;
 			a {
 				text-shadow: 0 0 0;
 				color: #4d4e53; 
-				height: 41px;
+				// height: 41px;
 				font-size: 1.25em;
-				margin-left: 0;
-				padding: 10px;
-				background: url("/sites/all/themes/signale/images/nav-divider.png") no-repeat; }
-				text-transform: lowercase;
+				padding-left: 10px;
+				padding-right: 10px;
+				background: url("../img/nav-divider.png") no-repeat; }
 			a:hover {
 				color: $turquoise;
-				background: url("/sites/all/themes/signale/images/nav-divider.png") no-repeat; }
+				background: url("../img/nav-divider.png") no-repeat; }
 		}
 		li:first-child {
 			a { background-image: none; }
 		}
-		li.active-trail {
+		li.active {
 			a, 
 			a:hover {
 				color: $turquoise;
@@ -45,10 +38,5 @@
 				-moz-box-shadow: none;
 				box-shadow: none; }
 		}
-		li.leaf {
-			background-image: none;
-			list-style: none;
-			padding: 0; }
-		li.expanded, li.collapsed, li.leaf { padding: 0; }
- 	}
+	}
 }
