fix image paths
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@113 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -45,21 +45,21 @@ h2 {
 	margin-bottom: 2px;
 	margin-top: 0; }
 .icon-arrow-green {
-	background: url("../img/icon-arrow-green.png") no-repeat; }
+	background: url("../images/icon-arrow-green.png") no-repeat; }
 .icon-arrow-white {
-	background: url("../img/icon-arrow-white.png") no-repeat; }
+	background: url("../images/icon-arrow-white.png") no-repeat; }
 .icon-pathways {
 	width: 42px;
 	height: 42px;
 	vertical-align: middle;
-	background: url("../img/icon-pathways.png") no-repeat;
+	background: url("../images/icon-pathways.png") no-repeat;
 	margin-top: 0;
 	margin-bottom: 4px; }
 .icon-panels {
 	width: 32px;
 	height: 32px;
 	vertical-align: middle;
-	background: url("../img/icon-panels.png") no-repeat;
+	background: url("../images/icon-panels.png") no-repeat;
 	margin-top: 0;
 	margin-bottom: 4px; }
 
