--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -9,7 +9,7 @@
 /* Header on sub pages */
 /*------------------------------*/
 header {
-	background: url("../img/panel.jpg") no-repeat scroll top left;
+	background: url("../images/panel.jpg") no-repeat scroll top left;
 	background-position: center 14px;
 	height: 165px;
 	h2 { margin-top: 90px; }
@@ -39,7 +39,7 @@ footer {
 	text-align: center;
 	color: $darkGray;
 	.container { 
-		background: url("../img/hr.png") no-repeat top;
+		background: url("../images/hr.png") no-repeat top;
 		padding: 30px 0; }
 	ul.footer-nav {
 		list-style: none;
