--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -4,7 +4,7 @@
 .hero {
 	width: 100%;
 	height: 543px;
-	background: url("../img/panel.jpg") no-repeat scroll top left;
+	background: url("../images/panel.jpg") no-repeat scroll top left;
 	background-position: center 14px;
 	.content {
 		float: left;
@@ -100,13 +100,13 @@ a.signale {
 	}
 }
 .featured-content-first {
-	background: url("../img/hr.png") no-repeat bottom;
+	background: url("../images/hr.png") no-repeat bottom;
 	padding-bottom: 0;
 }
 
 /* Media */
 /*------------------------------*/
-.media { background: url("../img/hr-vert.png") no-repeat right top; }
+.media { background: url("../images/hr-vert.png") no-repeat right top; }
 .video-player { margin-bottom: 30px; }
 
 /* Warburg Institute */
@@ -126,7 +126,7 @@ a.signale {
 	display: table;
 	clear: both;
 	padding: 15px 0;
-	background: url("../img/interview-bg.png") no-repeat bottom;
+	background: url("../images/interview-bg.png") no-repeat bottom;
 	img { 
 		border: 1px solid #c8c8c8; // TODO: Add variable; change to global rule for images to have border?
 		float: left;
@@ -150,6 +150,6 @@ a.signale {
 	margin: 0;
 	li { 
 		padding-left: 15px;
-		background: url("../img/icon-arrow-green.png") no-repeat left top;
+		background: url("../images/icon-arrow-green.png") no-repeat left top;
 		margin-bottom: 1em; }
 }
