--- a/css/content.css
+++ b/css/content.css
@@ -5860,16 +5860,16 @@ h2 {
   margin-top: 0; }
 
 .icon-arrow-green {
-  background: url("../img/icon-arrow-green.png") no-repeat; }
+  background: url("../images/icon-arrow-green.png") no-repeat; }
 
 .icon-arrow-white {
-  background: url("../img/icon-arrow-white.png") no-repeat; }
+  background: url("../images/icon-arrow-white.png") no-repeat; }
 
 .icon-pathways {
   width: 42px;
   height: 42px;
   vertical-align: middle;
-  background: url("../img/icon-pathways.png") no-repeat;
+  background: url("../images/icon-pathways.png") no-repeat;
   margin-top: 0;
   margin-bottom: 4px; }
 
@@ -5877,7 +5877,7 @@ h2 {
   width: 32px;
   height: 32px;
   vertical-align: middle;
-  background: url("../img/icon-panels.png") no-repeat;
+  background: url("../images/icon-panels.png") no-repeat;
   margin-top: 0;
   margin-bottom: 4px; }
 
@@ -5926,7 +5926,7 @@ h2 {
 /* Header on sub pages */
 /*------------------------------*/
 header {
-  background: url("../img/panel.jpg") no-repeat scroll top left;
+  background: url("../images/panel.jpg") no-repeat scroll top left;
   background-position: center 14px;
   height: 165px; }
   header h2 {
@@ -5956,7 +5956,7 @@ footer {
   text-align: center;
   color: #4d4e53; }
   footer .container {
-    background: url("../img/hr.png") no-repeat top;
+    background: url("../images/hr.png") no-repeat top;
     padding: 30px 0; }
   footer ul.footer-nav {
     list-style: none;
@@ -5989,7 +5989,7 @@ footer {
 .hero {
   width: 100%;
   height: 543px;
-  background: url("../img/panel.jpg") no-repeat scroll top left;
+  background: url("../images/panel.jpg") no-repeat scroll top left;
   background-position: center 14px; }
   .hero .content {
     float: left;
@@ -6079,13 +6079,13 @@ a.signale {
       margin-left: 10px; }
 
 .featured-content-first {
-  background: url("../img/hr.png") no-repeat bottom;
+  background: url("../images/hr.png") no-repeat bottom;
   padding-bottom: 0; }
 
 /* Media */
 /*------------------------------*/
 .media {
-  background: url("../img/hr-vert.png") no-repeat right top; }
+  background: url("../images/hr-vert.png") no-repeat right top; }
 
 .video-player {
   margin-bottom: 30px; }
@@ -6107,7 +6107,7 @@ a.signale {
   display: table;
   clear: both;
   padding: 15px 0;
-  background: url("../img/interview-bg.png") no-repeat bottom; }
+  background: url("../images/interview-bg.png") no-repeat bottom; }
   .interview img {
     border: 1px solid #c8c8c8;
     float: left;
@@ -6130,7 +6130,7 @@ a.signale {
   margin: 0; }
   .book-resources li {
     padding-left: 15px;
-    background: url("../img/icon-arrow-green.png") no-repeat left top;
+    background: url("../images/icon-arrow-green.png") no-repeat left top;
     margin-bottom: 1em; }
 
 /* Warburg portrait */
