--- a/css/content.css
+++ b/css/content.css
@@ -5898,22 +5898,22 @@ h2 {
     font-size: 1em; }
   .navbar .nav {
     float: right; }
-  .navbar .menu li a {
-    text-shadow: 0 0 0;
-    color: #4d4e53;
-    font-size: 1.25em;
-    padding: 5px 10px;
-    border-left: 1px solid #cad6b5; }
-  .navbar .menu li:first-child a {
-    border: none; }
-  .navbar .menu li.active a,
-  .navbar .menu li.active a:hover {
-    color: #a7c03a;
-    border-bottom: 4px solid #a7c03a;
-    background-color: inherit;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
+    .navbar .nav li a {
+      text-shadow: 0 0 0;
+      color: #4d4e53;
+      font-size: 1.25em;
+      padding: 5px 10px;
+      border-left: 1px solid #cad6b5; }
+    .navbar .nav li:first-child a {
+      border: none; }
+    .navbar .nav li.active a,
+    .navbar .nav li.active a:hover {
+      color: #a7c03a;
+      border-bottom: 4px solid #a7c03a;
+      background-color: inherit;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none; }
 
 /* Institution branding */
 /*------------------------------*/
