--- a/css/system.menus.css
+++ b/css/system.menus.css
@@ -1,7 +1,7 @@
 
 /**
  * @file
- * Styles for menus and navigation markup.
+ * Styles for menus and navigation markup -- modified for Warburg site
  */
 
 /**
