fix main nav appearance
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@124 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5899,7 +5899,8 @@ h2 {
   .navbar .nav {
     float: right; }
     .navbar .nav li {
-      float: left; }
+      float: left;
+      margin: 0; }
       .navbar .nav li a {
         text-shadow: 0 0 0;
         color: #4d4e53;
