--- a/css/content.css
+++ b/css/content.css
@@ -5909,8 +5909,8 @@ h2 {
         border-left: 1px solid #cad6b5; }
     .navbar .nav li:first-child a {
       border: none; }
-    .navbar .nav li.active a,
-    .navbar .nav li.active a:hover {
+    .navbar .nav li.active-trail a,
+    .navbar .nav li.active-trail a:hover {
       color: #a7c03a;
       border-bottom: 4px solid #a7c03a;
       background-color: inherit;
