--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -31,7 +31,7 @@
 		li:first-child {
 			a { border: none; }
 		}
-		li.active {
+		li.active-trail {
 			a, 
 			a:hover {
 				color: $linkPrimary;
