add home page content blocks
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@248 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -6,7 +6,7 @@
 	height: 543px;
 	background: url("../images/panel.jpg") no-repeat scroll top left;
 	background-position: center 14px;
-	.content {
+	.home-content {
 		float: left;
 		padding-left: 16.4583333%;
 		padding-top: 73px;
