--- a/css/content.css
+++ b/css/content.css
@@ -1773,19 +1773,19 @@ table th[class*="span"],
   background-image: url(image-path("glyphicons-halflings-white.png")); }
 
 .icon-glass {
-  background-position: 0 0; }
+  background-position: 0      0; }
 
 .icon-music {
-  background-position: -24px 0; }
+  background-position: -24px  0; }
 
 .icon-search {
-  background-position: -48px 0; }
+  background-position: -48px  0; }
 
 .icon-envelope {
-  background-position: -72px 0; }
+  background-position: -72px  0; }
 
 .icon-heart {
-  background-position: -96px 0; }
+  background-position: -96px  0; }
 
 .icon-star {
   background-position: -120px 0; }
@@ -1833,19 +1833,19 @@ table th[class*="span"],
   background-position: -456px 0; }
 
 .icon-home {
-  background-position: 0 -24px; }
+  background-position: 0      -24px; }
 
 .icon-file {
-  background-position: -24px -24px; }
+  background-position: -24px  -24px; }
 
 .icon-time {
-  background-position: -48px -24px; }
+  background-position: -48px  -24px; }
 
 .icon-road {
-  background-position: -72px -24px; }
+  background-position: -72px  -24px; }
 
 .icon-download-alt {
-  background-position: -96px -24px; }
+  background-position: -96px  -24px; }
 
 .icon-download {
   background-position: -120px -24px; }
@@ -1893,19 +1893,19 @@ table th[class*="span"],
   background-position: -456px -24px; }
 
 .icon-tag {
-  background-position: 0 -48px; }
+  background-position: 0      -48px; }
 
 .icon-tags {
-  background-position: -25px -48px; }
+  background-position: -25px  -48px; }
 
 .icon-book {
-  background-position: -48px -48px; }
+  background-position: -48px  -48px; }
 
 .icon-bookmark {
-  background-position: -72px -48px; }
+  background-position: -72px  -48px; }
 
 .icon-print {
-  background-position: -96px -48px; }
+  background-position: -96px  -48px; }
 
 .icon-camera {
   background-position: -120px -48px; }
@@ -1953,19 +1953,19 @@ table th[class*="span"],
   background-position: -456px -48px; }
 
 .icon-pencil {
-  background-position: 0 -72px; }
+  background-position: 0      -72px; }
 
 .icon-map-marker {
-  background-position: -24px -72px; }
+  background-position: -24px  -72px; }
 
 .icon-adjust {
-  background-position: -48px -72px; }
+  background-position: -48px  -72px; }
 
 .icon-tint {
-  background-position: -72px -72px; }
+  background-position: -72px  -72px; }
 
 .icon-edit {
-  background-position: -96px -72px; }
+  background-position: -96px  -72px; }
 
 .icon-share {
   background-position: -120px -72px; }
@@ -2013,19 +2013,19 @@ table th[class*="span"],
   background-position: -456px -72px; }
 
 .icon-plus-sign {
-  background-position: 0 -96px; }
+  background-position: 0      -96px; }
 
 .icon-minus-sign {
-  background-position: -24px -96px; }
+  background-position: -24px  -96px; }
 
 .icon-remove-sign {
-  background-position: -48px -96px; }
+  background-position: -48px  -96px; }
 
 .icon-ok-sign {
-  background-position: -72px -96px; }
+  background-position: -72px  -96px; }
 
 .icon-question-sign {
-  background-position: -96px -96px; }
+  background-position: -96px  -96px; }
 
 .icon-info-sign {
   background-position: -120px -96px; }
@@ -2073,19 +2073,19 @@ table th[class*="span"],
   background-position: -456px -96px; }
 
 .icon-exclamation-sign {
-  background-position: 0 -120px; }
+  background-position: 0      -120px; }
 
 .icon-gift {
-  background-position: -24px -120px; }
+  background-position: -24px  -120px; }
 
 .icon-leaf {
-  background-position: -48px -120px; }
+  background-position: -48px  -120px; }
 
 .icon-fire {
-  background-position: -72px -120px; }
+  background-position: -72px  -120px; }
 
 .icon-eye-open {
-  background-position: -96px -120px; }
+  background-position: -96px  -120px; }
 
 .icon-eye-close {
   background-position: -120px -120px; }
@@ -2136,19 +2136,19 @@ table th[class*="span"],
   background-position: -456px -118px; }
 
 .icon-hdd {
-  background-position: 0 -144px; }
+  background-position: 0      -144px; }
 
 .icon-bullhorn {
-  background-position: -24px -144px; }
+  background-position: -24px  -144px; }
 
 .icon-bell {
-  background-position: -48px -144px; }
+  background-position: -48px  -144px; }
 
 .icon-certificate {
-  background-position: -72px -144px; }
+  background-position: -72px  -144px; }
 
 .icon-thumbs-up {
-  background-position: -96px -144px; }
+  background-position: -96px  -144px; }
 
 .icon-thumbs-down {
   background-position: -120px -144px; }
@@ -5994,14 +5994,14 @@ footer {
   height: 543px;
   background: url("../images/panel.jpg") no-repeat scroll top left;
   background-position: center 14px; }
-  .hero .content {
+  .hero .home-content {
     float: left;
     padding-left: 16.4583333%;
     padding-top: 73px;
     /*width: 62.3611111% minus padding 16.4583333%;*/
     width: 43%;
     color: white; }
-    .hero .content p {
+    .hero .home-content p {
       width: 500px;
       background-color: #486570;
       opacity: .91;
@@ -6009,11 +6009,11 @@ footer {
       padding: 30px;
       margin: 0;
       line-height: 1.2em; }
-    .hero .content ul {
+    .hero .home-content ul {
       margin: 0;
       padding: 0;
       margin-top: 10px; }
-      .hero .content ul li {
+      .hero .home-content ul li {
         display: block;
         list-style-type: none;
         float: left; }
