add <li> formatting
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@257 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5843,7 +5843,7 @@ h2 {
   margin: 0;
   color: white; }
 
-.main-content p {
+.main-content p, .main-content li {
   font-size: 1.4375em;
   line-height: 1.2em; }
 .main-content h3 {
