--- a/css/content.css
+++ b/css/content.css
@@ -5963,7 +5963,8 @@ footer {
     padding: 30px 0; }
   footer ul.menu {
     list-style: none;
-    margin: 0 0 1em; }
+    margin: 0 0 1em;
+    text-align: center; }
     footer ul.menu li {
       display: inline-block;
       font-size: 1.1875em; }
