--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -44,6 +44,7 @@ footer {
 	ul.menu {
 		list-style: none;
 		margin: 0 0 1em;
+		text-align: center;
 		li { 
 			display: inline-block;
 			font-size: 1.1875em;
