--- a/css/content/_layout.scss
+++ b/css/content/_layout.scss
@@ -41,10 +41,9 @@ footer {
 	.container { 
 		background: url("../images/hr.png") no-repeat top;
 		padding: 30px 0; }
-	ul.menu {
+	ul.footer-nav {
 		list-style: none;
 		margin: 0 0 1em;
-		text-align: center;
 		li { 
 			display: inline-block;
 			font-size: 1.1875em;
