add signale logo to footer
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@266 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5987,6 +5987,9 @@ footer {
   .social-icons img {
     padding: 0 5px; }
 
+.signale-logo {
+  margin-top: .5em; }
+
 /* Background image */
 /*------------------------------*/
 .hero {
