--- a/css/content.scss
+++ b/css/content.scss
@@ -4,6 +4,9 @@
 // Override necessary Bootstrap variables
 @import 'content/variables';
 
+// Fonts
+@import 'content/font-walkway';
+
 // Load partials
 @import 'content/base';
 @import 'content/navigation';
