add images for jquery interaction for branding
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@278 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5914,8 +5914,7 @@ h2 {
     color: #869c4f;
     font-size: 1.125em;
     font-family: 'WalkwayBoldRegular';
-    margin-top: 15px;
-    letter-spacing: 0.05em; }
+    margin-top: 15px; }
   .navbar .nav {
     float: right; }
     .navbar .nav li {
