--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -16,9 +16,7 @@
 		color: #869c4f;
 		font-size: 1.125em; 
 		font-family: 'WalkwayBoldRegular';
-		margin-top: 15px;
-		letter-spacing: 0.05em; }
-	// .brand:hover { color: $turquoiseHover; }
+		margin-top: 15px; }
 	.nav {
 		float: right;
 		li {
