--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -48,7 +48,7 @@ body {
 					top: 0;
 					left: 0;
 					margin-left: 0; /* 30 480 */
-					z-index: 200;
+					//z-index: 99999;
 				
 
 
@@ -104,7 +104,7 @@ body {
 
 					#nav > ul
 					{
-						z-index: 99999;
+						//z-index: 99999;
 						height: 45px;
 						background-color: $gray;
 						list-style-type: none;
