Work on panel css.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@333 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5014,7 +5014,8 @@ body {
       position: absolute;
       top: 100%;
       list-style-type: none;
-      margin-left: 0; }
+      margin-left: 0;
+      z-index: 200; }
     .page.panels header #nav li:hover ul {
       display: block;
       left: 0;
