--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -166,6 +166,7 @@ body {
 							top: 100%;
 							list-style-type: none;
 							margin-left: 0;
+							z-index: 200;
 						}
 							#nav li:hover ul
 							{
