--- a/css/content/_variables.scss
+++ b/css/content/_variables.scss
@@ -20,8 +20,8 @@ $linkPrimary: #a7c03a; // TODO: may need to rename this if green is not actually
 
 // Fonts
 // -------------------------
-$baseFontFamily:        Abel;        @import
-url(http://fonts.googleapis.com/css?family=Abel);
+// $baseFontFamily:        Abel;        @import
+// url(http://fonts.googleapis.com/css?family=Abel);
 
 // -------------------
 // Boostrap overrides
