try omitting the protocol when calling the google font
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@337 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -1,3 +1,4 @@
+@import url(//fonts.googleapis.com/css?family=Abel);
 /*
  * Bootstrap v2.3.1
  *
@@ -5831,6 +5832,7 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 
 body {
   font-size: 100%;
+  font-family: Abel;
   font-weight: 200;
   color: #486570; }
 
