--- a/css/content/_base.scss
+++ b/css/content/_base.scss
@@ -1,6 +1,6 @@
 body {
 	font-size: 100%;
-	// font-family: $baseFontFamily;
+	font-family: $baseFontFamily;
 	font-weight: 200;
 	color: $textColorDark;
 }
