Work on carousel.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@364 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5109,9 +5109,9 @@ body {
   margin-left: 0;
   margin-right: 0; }
   .rs-carousel ul li {
-    margin-right: 25px; }
+    margin-right: 0; }
     .rs-carousel ul li:first-child {
-      margin-left: 75px; }
+      margin-left: 0; }
     .rs-carousel ul li .panel-item a {
       position: relative;
       display: inline-block;
