--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -388,10 +388,12 @@ body {
 		
 		li {
 
-			margin-right: 25px;
+			//margin-right: 25px;
+			margin-right: 0;
 			
 			&:first-child {
-				margin-left: 75px;
+				//margin-left: 75px;
+				margin-left: 0;
 			}
 
 			.panel-item {
